[workspace]
resolver = "2"
members = [
    "dhkem",
    "frodo-kem",
    "ml-kem",
    "x-wing"
]

[profile.bench]
debug = true

[patch.crates-io]
crypto-common  = { git = "https://github.com/baloo/traits.git", branch = "baloo/digest-newtype-master" }
digest         = { git = "https://github.com/baloo/traits.git", branch = "baloo/digest-newtype-master" }
elliptic-curve = { git = "https://github.com/baloo/traits.git", branch = "baloo/digest-newtype-master" }
kem            = { git = "https://github.com/baloo/traits.git", branch = "baloo/digest-newtype-master" }

k256 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p256 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p384 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p521 = { git = "https://github.com/RustCrypto/elliptic-curves.git" }

sha2 = { git = "https://github.com/RustCrypto/hashes.git", branch = "newtype" }
sha3 = { git = "https://github.com/RustCrypto/hashes.git", branch = "newtype" }

curve25519-dalek = { git = "https://github.com/baloo/curve25519-dalek.git", branch = "baloo/rand-0.9" }
x25519-dalek     = { git = "https://github.com/baloo/curve25519-dalek.git", branch = "baloo/rand-0.9" }
